added support for lucene indices

--- a/frmMain.resx
+++ b/frmMain.resx
@@ -127,8 +127,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACs
-        DAAAAk1TRnQBSQFMAgEBBAEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        DQAAAk1TRnQBSQFMAgEBBQEAATABAAEwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -156,7 +156,11 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ACAAB8wGZ
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4EAAfcOZjEAAfcB9QHx
+        Ad0BvAQJAbsEtQFmMQAB9wH/AwcBuwS1A7QBtQFmMQAB9wP/AfUC9AHzARkB8QHdAgkBtQFmMQAB9wH/
+        AbwB7gEHArsFtQG0AbsBZjEAAbUH/wH1AfQC8wHxAQkBZjEAAbUB/wFDAfcB/wHvARAB/wG7BLUBCQFm
+        MQABtQH/AewBDwIRAewE/wH1AfQB8AFmMQABtQH/AfMBEgHzAREB8wH/AQcCuwK1AfEBZjEAAbsC/wG8
+        AesBvAf/AfIBZjEAAbsD/wHsA/8B7gMHAbsB8gFmMQABuw3/AWYxAAG1BLsC7wK1Au8DtQH3dAAB8wGZ
         ARwBcwNLAXMBmQEbMAABRAFDAe8CAAGZAXMBdAF5AZkBmgF6AVIBMQFRAUsBmQYAAfcLZhMAAfQBBwHt
         AW0B6gHrAe0BBwEAAUQBTAF0AUoCAAFzAVgBegGaAaABmgF6AVkBMgIxAUoGAAH3Af8B8QLwArwDCQG7
         AWYBAAH3DWYDAAHwAewBbAGuA7QBiwGGAe0BTAF0AXoBcwIAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSgYA
@@ -178,11 +182,12 @@
         AZoBegFZAUsIAAHWAQkF3AHWBdUBrQIAAfEB9wEHA/8C9AIZAZIB6wG8BAABGgKZAhoCwwIaAZkBHAGZ
         AgABHAGaBcMBmgFzCAAF1gLVA7QBswOtAwAB8QL3AbwB8gH0AfAB7wLsAfAFAAH/AfQBGgGZARwBdAFz
         AhwBvAEbAf8DAAJ0ARwCcwJ0GwAB9AG8Ae8B7AHrAewBkgEHAfQEAAFCAU0BPgcAAT4DAAEoAwABQAMA
-        ASADAAEBAQABAQYAAQEWAAP/gQAB4AEHBf8B+AHAAQMB8AEAAv8B4AEQAcABAwHwAQABgAEBAcABAAHA
-        AQMB8AEAAYABAQGAAQEBwAEDAYABAAGAAQEBAAEDAcABAwIAAYABAQEAAQEBwAEDAgABgAEBAQABAQHA
-        AQMCAAGAAQEBAAEBAcABAwIAAYABAQEAAQEBwAEDAgABgAEBAQABAQHAAQMCAAGAAQEBAAEBAcABAwIA
-        AYABAQEAAQEBwAEDAQABfwGAAQEBAAEBAcABAwEAAX8BgAEBAYABAwHAAQMBAAF/AYABAQHAAQcBwAED
-        AYAD/wHgAQ8L
+        ASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8HAAEBBwABAQcAAQEHAAEBBwABAQcAAQEHAAEBBwABAQcA
+        AQEHAAEBBwABAQcAAQEHAAEBBgAC/wYAAeABBwX/AfgBwAEDAfABAAL/AeABEAHAAQMB8AEAAYABAQHA
+        AQABwAEDAfABAAGAAQEBgAEBAcABAwGAAQABgAEBAQABAwHAAQMCAAGAAQEBAAEBAcABAwIAAYABAQEA
+        AQEBwAEDAgABgAEBAQABAQHAAQMCAAGAAQEBAAEBAcABAwIAAYABAQEAAQEBwAEDAgABgAEBAQABAQHA
+        AQMCAAGAAQEBAAEBAcABAwEAAX8BgAEBAQABAQHAAQMBAAF/AYABAQGAAQMBwAEDAQABfwGAAQEBwAEH
+        AcABAwGAA/8B4AEPCw==
 </value>
   </data>
   <metadata name="toolStrip1.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
