added position memory, renamed assembly to match project name

--- a/frmMain.resx
+++ b/frmMain.resx
@@ -127,7 +127,7 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADU
         DQAAAk1TRnQBSQFMAgEBBQEAATABAAEwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
@@ -156,38 +156,38 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4EAAfcOZjEAAfcB9QHx
-        Ad0BvAQJAbsEtQFmMQAB9wH/AwcBuwS1A7QBtQFmMQAB9wP/AfUC9AHzARkB8QHdAgkBtQFmMQAB9wH/
-        AbwB7gEHArsFtQG0AbsBZjEAAbUH/wH1AfQC8wHxAQkBZjEAAbUB/wFDAfcB/wHvARAB/wG7BLUBCQFm
-        MQABtQH/AewBDwIRAewE/wH1AfQB8AFmMQABtQH/AfMBEgHzAREB8wH/AQcCuwK1AfEBZjEAAbsC/wG8
-        AesBvAf/AfIBZjEAAbsD/wHsA/8B7gMHAbsB8gFmMQABuw3/AWYxAAG1BLsC7wK1Au8DtQH3dAAB8wGZ
-        ARwBcwNLAXMBmQEbMAABRAFDAe8CAAGZAXMBdAF5AZkBmgF6AVIBMQFRAUsBmQYAAfcLZhMAAfQBBwHt
-        AW0B6gHrAe0BBwEAAUQBTAF0AUoCAAFzAVgBegGaAaABmgF6AVkBMgIxAUoGAAH3Af8B8QLwArwDCQG7
-        AWYBAAH3DWYDAAHwAewBbAGuA7QBiwGGAe0BTAF0AXoBcwIAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSgYA
-        AfcB/wG1Aa4B/wG1Aa4B9AG1Aa4BuwFmAQAB9wG8AwcB7wG1Au8CtQL3AWYCAAHwAesBkQEJArsDCQG0
-        AYsBhgF6AXMDAAFzAVkBegGaAaABmgF6AVkBMgIxAUoDAAGOAW4BcwG1Bf8E9AG7AWYBAAH3A/8BBwL0
-        ARkB7wEZAd0BCQH3AWYBAAH0AewB7QgJAdYBiwHtBAABcwFZAXoBmgGgAZoBegFZATICMQFLAgABbgF5
-        AZoBoAHvAf8BtQGuAf8BtQGuAfQBtQGuAQcBZgEAAfcD/wEHAf8C9AG1AhkB3QG1AWYBAAEHAewB3QHq
-        AfcB3QYJAbUBhgEHAwABcwFZAXoBmgGgAZoBegFZATICMQFLAgABcwFZAqABtQf/AvQBBwFmAQAB9wHw
-        ArwEBwHvAbUC7wG1AWYBAAGSAe8BGQEHAREB9wEZAQkBQwG1ARECCQGuAe0DAAFzAVkBegGaAaABmgF6
-        AVkBMgIxAUsCAAFzAVkBmgGgAbsB/wG1Aa4B/wG1Aa4B/wG1Aa4BBwFmAQABtQP/AbwD/wEHAfQCGQHv
-        AWYBAAHsAfABGQHzAW0BQwEJAd0BvAEQAbUCCQG0AesDAAFzAVkBegGaAaABmgF6AVkBMgIxAUsCAAF0
-        AVkBmgGgAbsJ/wH0AWYBAAHvA/8BvAP/AQcC9AEZAe8BZgEAAesD9AH/AQ4BBwHzAeoBuwEUAgkBtAHq
-        AwABcwFZAXoBmgGgAZoBegFZATICMQFLAgABdAFZAZoBoATWAdUDtAStAQABtQHxBbwEBwHvAbUBZgEA
-        AewB8gH0Af8BbQERARUBbQIZAd0CCQG0AW0DAAF0AVkBegGaAaABmgF6AVkBMgIxAUsCAAF0AVkBmgGg
-        AdYBCQXcAdYD1QGtAQABuwP/AbwD/wEHAv8B9AHvAWYBAAHvAbwB9AH/AfQB6wHqAfMB8AIZAgkBkQHs
-        AwABdAFZAXoBmgGgAZoBegFZATICMQFuAgABdAFZAZoBoAXWAtUDtAKtAQABuwP/AbwD/wG8A/8BBwFm
-        AQABvAH3A/8B9wFtAfABQwHzARkCCQFtAQcDAAEcAXoBoATDAaABmgF6AVgBbgIAAXQBWQGaAaABegFZ
-        ATIBMQFLCAAE1gHVA7QGrQEAAfQB9wEHA/8BBwFtAe8B9AEZAQkBkQHsAfQDAAF0CsMBbgIAAXQBegOg
-        AZoBegFZAUsIAAHWAQkF3AHWBdUBrQIAAfEB9wEHA/8C9AIZAZIB6wG8BAABGgKZAhoCwwIaAZkBHAGZ
-        AgABHAGaBcMBmgFzCAAF1gLVA7QBswOtAwAB8QL3AbwB8gH0AfAB7wLsAfAFAAH/AfQBGgGZARwBdAFz
-        AhwBvAEbAf8DAAJ0ARwCcwJ0GwAB9AG8Ae8B7AHrAewBkgEHAfQEAAFCAU0BPgcAAT4DAAEoAwABQAMA
-        ASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8HAAEBBwABAQcAAQEHAAEBBwABAQcAAQEHAAEBBwABAQcA
-        AQEHAAEBBwABAQcAAQEHAAEBBgAC/wYAAeABBwX/AfgBwAEDAfABAAL/AeABEAHAAQMB8AEAAYABAQHA
-        AQABwAEDAfABAAGAAQEBgAEBAcABAwGAAQABgAEBAQABAwHAAQMCAAGAAQEBAAEBAcABAwIAAYABAQEA
-        AQEBwAEDAgABgAEBAQABAQHAAQMCAAGAAQEBAAEBAcABAwIAAYABAQEAAQEBwAEDAgABgAEBAQABAQHA
-        AQMCAAGAAQEBAAEBAcABAwEAAX8BgAEBAQABAQHAAQMBAAF/AYABAQGAAQMBwAEDAQABfwGAAQEBwAEH
-        AcABAwGAA/8B4AEPCw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/4EAAfcOZjEAAfcB/wHx
+        Ad0BvAQJAbsEtQFmMQAB9wH/AwcBuwS1A7QBtQFmMQAB9wT/AvQB8wEZAfEB3QIJAbUBZjEAAfcB/wK8
+        AQcCuwW1AbQBuwFmMQABtQj/AfQC8wHxAQkBZjEAAbUB/wFDAfcB/wHvARAB/wG7BLUBCQFmMQABtQH/
+        AewBDwIRAewF/wH0AfABZjEAAbUB/wHzARIB8wERAfMB/wEHArsCtQHxAWYxAAG7Av8BvAHrAbwH/wHy
+        AWYxAAG7A/8B7AP/AbwDBwG7AfIBZjEAAbsN/wFmMQABtQS7Au8CtQLvA7UB93QAAfMBmQEcAXMDSwFz
+        AZkBGzAAAUQBQwHvAgABmQFzAXQBeQGZAZoBegFSATEBUQFLAZkGAAH3C2YTAAH0AQcB7QFtAeoB6wHt
+        AQcBAAFEAUwBdAFKAgABcwFYAXoBmgGgAZoBegFZATICMQFKBgAB9wH/AfEC8AK8AwkBuwFmAQAB9w1m
+        AwAB8AHsAWwBrgO0AYsBhgHtAUwBdAF6AXMCAAFzAVkBegGaAaABmgF6AVkBMgIxAUoGAAH3Af8BtQGu
+        Af8BtQGuAfQBtQGuAbsBZgEAAfcBvAMHAe8BtQLvArUC9wFmAgAB8AHrAZEBCQK7AwkBtAGLAYYBegFz
+        AwABcwFZAXoBmgGgAZoBegFZATICMQFKAwABjgFuAXMBtQX/BPQBuwFmAQAB9wP/AQcC9AEZAe8BGQHd
+        AQkB9wFmAQAB9AHsAe0ICQHWAYsB7QQAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSwIAAW4BeQGaAaAB7wH/
+        AbUBrgH/AbUBrgH0AbUBrgEHAWYBAAH3A/8BBwH/AvQBtQIZAd0BtQFmAQABBwHsAd0B6gH3Ad0GCQG1
+        AYYBBwMAAXMBWQF6AZoBoAGaAXoBWQEyAjEBSwIAAXMBWQKgAbUH/wL0AQcBZgEAAfcB8AK8BAcB7wG1
+        Au8BtQFmAQABkgHvARkBBwERAfcBGQEJAUMBtQERAgkBrgHtAwABcwFZAXoBmgGgAZoBegFZATICMQFL
+        AgABcwFZAZoBoAG7Af8BtQGuAf8BtQGuAf8BtQGuAQcBZgEAAbUD/wG8A/8BBwH0AhkB7wFmAQAB7AHw
+        ARkB8wFtAUMBCQHdAbwBEAG1AgkBtAHrAwABcwFZAXoBmgGgAZoBegFZATICMQFLAgABdAFZAZoBoAG7
+        Cf8B9AFmAQAB7wP/AbwD/wEHAvQBGQHvAWYBAAHrA/QB/wEOAQcB8wHqAbsBFAIJAbQB6gMAAXMBWQF6
+        AZoBoAGaAXoBWQEyAjEBSwIAAXQBWQGaAaAE1gHVA7QErQEAAbUB8QW8BAcB7wG1AWYBAAHsAfIB9AH/
+        AW0BEQEVAW0CGQHdAgkBtAFtAwABdAFZAXoBmgGgAZoBegFZATICMQFLAgABdAFZAZoBoAHWAQkF3AHW
+        A9UBrQEAAbsD/wG8A/8BBwL/AfQB7wFmAQAB7wG8AfQB/wH0AesB6gHzAfACGQIJAZEB7AMAAXQBWQF6
+        AZoBoAGaAXoBWQEyAjEBbgIAAXQBWQGaAaAF1gLVA7QCrQEAAbsD/wG8A/8BvAP/AQcBZgEAAbwB9wP/
+        AfcBbQHwAUMB8wEZAgkBbQEHAwABHAF6AaAEwwGgAZoBegFYAW4CAAF0AVkBmgGgAXoBWQEyATEBSwgA
+        BNYB1QO0Bq0BAAH0AfcBBwP/AQcBbQHvAfQBGQEJAZEB7AH0AwABdArDAW4CAAF0AXoDoAGaAXoBWQFL
+        CAAB1gEJBdwB1gXVAa0CAAHxAfcBBwP/AvQCGQGSAesBvAQAARoCmQIaAsMCGgGZARwBmQIAARwBmgXD
+        AZoBcwgABdYC1QO0AbMDrQMAAfEC9wG8AfIB9AHwAe8C7AHwBQAB/wH0ARoBmQEcAXQBcwIcAbwBGwH/
+        AwACdAEcAnMCdBsAAfQBvAHvAewB6wHsAZIBBwH0BAABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEA
+        AQEGAAEBFgAD/wEAAv8GAAL/BwABAQcAAQEHAAEBBwABAQcAAQEHAAEBBwABAQcAAQEHAAEBBwABAQcA
+        AQEHAAEBBwABAQYAAv8GAAHgAQcF/wH4AcABAwHwAQAC/wHgARABwAEDAfABAAGAAQEBwAEAAcABAwHw
+        AQABgAEBAYABAQHAAQMBgAEAAYABAQEAAQMBwAEDAgABgAEBAQABAQHAAQMCAAGAAQEBAAEBAcABAwIA
+        AYABAQEAAQEBwAEDAgABgAEBAQABAQHAAQMCAAGAAQEBAAEBAcABAwIAAYABAQEAAQEBwAEDAgABgAEB
+        AQABAQHAAQMBAAF/AYABAQEAAQEBwAEDAQABfwGAAQEBgAEDAcABAwEAAX8BgAEBAcABBwHAAQMBgAP/
+        AeABDws=
 </value>
   </data>
   <metadata name="toolStrip1.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -200,33 +200,34 @@
   <data name="cmdOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAPCAYAAADtc08vAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJnSURBVDhPfZPtS1NhGMbPF/0g4p9TkGH5QUFmZGFamk1K
-        Qv1gKDZybZL0ImXaC6k4UcEcQvkhsgjfKgUrkcCI5KSZm5tt7jidZzO36dmvx60Up3QdDpzz8FzXc133
-        fT+SFIfWsXYKO4sp6NBTYi3nck85OS15VD430DDYRPz+Pf+ZD3V0fu5hnQ3isbzuo3m0HV3zqYNFTred
-        xRZY2OGpQZWIeOIx57GRHS9SICxvC+xA8CwTFupH61FDanRZ0zS0iCY+4NsPmdz2c7tOjt3PwB9ej/H/
-        HlrxqoIkQxLmITMhLbQjoqpCMABlT6/EBMz9tzD334hxI7uWTSMmpCqJ5KvJ1L2vIxwJR/eoAZXAip8P
-        XyZIa0pHOtNxHvtKLPu2zX8wvzWTaEpEqpZIuZ6CadiE97eX4EaQZY+CY95JvuUCUo4ln9UN336BETMJ
-        pgSkWgnJIF6jhPWrlc3QJm6XG8Xmoay7GumitZSP9slYBG03QtSBUTgQRKlGIsuahbwsEwwEcTtdfJ+e
-        Jc+iR2oYfkBRd8m+dtW+qyWhRjgQEXS9OuQVmchWBI+ioDgVXoy+JPPxiVghjzQeZ3ppdk8XqgeEPVHE
-        tK60KJkt8K35mLfb8doVitrE6f9wZ+AemU+y2QrH+swmGIeM6Kw6plxTaGLd6/Xy0zaH3+mnd/gZ6Y0Z
-        eyeyoq+Kk825okViHkSfZxwz2H7ZWFVWcS+6cdldqI413owNcvjm0YPHWS9qkXo3ndefBlmYd+BxLrFo
-        dyLLMuOT41R2GTh0O/X/F2o7VlXfNfJa9RS2XKK4rZTspjx0j3IPJP4BxCZjvlgsYnUAAAAASUVORK5C
-        YII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAnNJREFUOE9tk+tL
+        k1Ecx4+BEib2Kohe1T9RkGH5woHM6IJpN1OqF/rGaKjk2iTpIl20C5k4ScEaQvgisghvlZKVSGBEsrzk
+        5mabe5yXx5nbdPt0dDlz7nt44DmH5/s939/v+3viRBRqe+r5ONIrAJG4dZvYghBudUrs2bFb7Nq+U5Ro
+        dHHRnMhe80BLw9fnLLAo+RsxtTBLTXc92ppjUjIGjtedxOodj7BUn0pIrmiMuq1kRoucbshnRSACyTP1
+        majsrkT1q6vHwWCQYCgoX+DHiIWs+lPrTg7eS2c+sBDm/7u06HURiaWJGDuM+IP+iIiqSkEvFD67FBYw
+        tt7A2HotzA2tWzZ0GRA6QVJJEhUfKgiEAqvfqF4V7/Q8n771kVqdhjjx9Cy26XDtKzbXYHxnJMGQgCgW
+        JF9NxtBpwPPHg2/Rx5RbwT7mIMd0DnHUlMPM4uxmgS4j8YZ4RLlAlMpHLzB/N7PkX8LldKFY3RQ2FSPO
+        mwv4bOsPlxBcL2HVgV46kERRJsgwZ2CZsuDz+nA5nPwcHCbblIe423mf3KaLm+Iqf19OfJl0IEvQNmux
+        TFsILYdwKwqKQ+Fl9ys0jw6HG7m/6hCDk8MbUihuk/ZkE1MbU1fJLMPs3CxjNhsem0Junbx9Dbfa7qB5
+        nMlyIJwzS6Dv0KM1axlwDhCU5x6Ph1/WUeYd8zR3viCtKn3jRBa16DhSkyUjkvMgcx6yD2H9bWVGmcE1
+        4cJpc6La53jb086+6wdij3Oe7EXK7TTefGlnfMyO2zHJhM2BxWKht7+Xy42l7L2ZEpv8/++ha7lCdm0e
+        Z55cIL+ugMzqbLQPs2IS/wJeMl2cJ5b34gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="cmdCommit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIpSURBVDhPrZPdS5NxFMf3L3TfTdBFtzU1hmuxGjzlHMqq
-        YVgRvT2RL+XSZZqoWJlGLV8gW+HSScvpJJxU+AamSI2hTCVLM1e0xKGm2EQw+PY7v+j5tTJv6gfn8vM5
-        zznn+6hU/+M9exoFla99GW3eJTx2L6CxIYL7jhnU1nyC/XYIN8qnUFoygcKC18jLHcWF80EovQns7QFq
-        qlex0VtZXYMxrReH057wUgTe1kUuqKz48lee4MjCCnabn0OtlmE55BEC96N5Ligt+byu4Cf8PryIOJMP
-        BZenccDcJATO+lkuuGR794fgV3hkMoJtkhfWnHGkpjiFoO5umAuys0ZjBL/Dg8EwNuvdkOUATCaHEFRX
-        feQC+UxAEawH9/g/YFNiA44cfYGkpFohuFk5je4usFMCx0++guXYAN82LYxmps+mzj/gPhy0dEKS7EJw
-        tWwSHT6wDABNrm/s7l9Rfn2OL5UWRjNnZgQVODm1HQZDhRBcKRyHpxl46FxjwYnCmJ4TU+YTNqSfK+Kd
-        k1MYvN8Dvb5MCGx5YwwGqu5EeWcSUEjitBKG3s5ibGoOcu417DW2cVi7xwWdrkgIKJaOe1A+mwQEn82/
-        hTeheYRmlnCx2I54vYvBjYjf9QDaxHwhyMwYZnMv85m3GjzYskNCS0c/fF2D6O7zY+DlEPaZLFDr6pHA
-        4O2aOmg01ljB6VP9PJ6UMAoJ3ZlORdumhdHM1JWK4J0J2ULwL3/0d2xoOmtKzOuNAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAilJREFUOE+tk91L
+        k3EUx/cvdN9N0EW3NTWGa7EaPOUcyqphWBG9PZEv5dJlmqhYmUYtXyBb4dJJy+kknFT4BqZIjaFMJUsz
+        V7TEoabYRDD49ju/6Pm1Mm/qB+fy8znPOef7qFT/4z17GgWVr30Zbd4lPHYvoLEhgvuOGdTWfIL9dgg3
+        yqdQWjKBwoLXyMsdxYXzQSi9CeztAWqqV7HRW1ldgzGtF4fTnvBSBN7WRS6orPjyV57gyMIKdpufQ62W
+        YTnkEQL3o3kuKC35vK7gJ/w+vIg4kw8Fl6dxwNwkBM76WS64ZHv3h+BXeGQygm2SF9accaSmOIWg7m6Y
+        C7KzRmMEv8ODwTA2692Q5QBMJocQVFd95AL5TEARrAf3+D9gU2IDjhx9gaSkWiG4WTmN7i6wUwLHT76C
+        5dgA3zYtjGamz6bOP+A+HLR0QpLsQnC1bBIdPrAMAE2ub+zuX1F+fY4vlRZGM2dmBBU4ObUdBkOFEFwp
+        HIenGXjoXGPBicKYnhNT5hM2pJ8r4p2TUxi83wO9vkwIbHljDAaq7kR5ZxJQSOK0EobezmJsag5y7jXs
+        NbZxWLvHBZ2uSAgolo57UD6bBASfzb+FN6F5hGaWcLHYjni9i8GNiN/1ANrEfCHIzBhmcy/zmbcaPNiy
+        Q0JLRz98XYPo7vNj4OUQ9pksUOvqkcDg7Zo6aDTWWMHpU/08npQwCgndmU5F26aF0czUlYrgnQnZQvAv
+        f/R3bGg6a0rM640AAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
